Fixes overflow issue

--- a/src/_includes/assets/app.css
+++ b/src/_includes/assets/app.css
@@ -33,7 +33,6 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -61,7 +60,8 @@ h6 {
 
 a {
   color: currentColor;
-  text-decoration-color: var(--color-primary);
+  -webkit-text-decoration-color: var(--color-primary);
+          text-decoration-color: var(--color-primary);
   transition: color ease-in-out var(--transition-duration);
 }
 
@@ -186,6 +186,7 @@ dd + dt {
  */
 
 .o-abreast {
+  display: -ms-grid;
   display: grid;
   grid-gap: 2rem;
 }
@@ -220,6 +221,7 @@ dd + dt {
 .o-grid-row {
   display: flex;
   flex-wrap: wrap;
+  width: 100%;
   margin-bottom: 2.5rem;
   margin-right: -2rem;
   margin-left: -2rem;
@@ -246,11 +248,13 @@ dd + dt {
   padding: 0.5rem 1rem;
   background-color: #ffbf47;
   color: inherit;
-  transform: translateY(-100%);
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
 }
 
 .c-skip-link:focus {
-  transform: none;
+  -webkit-transform: none;
+          transform: none;
 }
 
 /**
@@ -258,7 +262,9 @@ dd + dt {
  */
 
 .c-button {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   display: inline-flex;
   padding: 0.5rem 1rem;
   color: #fff;
@@ -280,8 +286,9 @@ dd + dt {
 }
 
 .c-header__inner {
+  display: -ms-grid;
   display: grid;
-  grid-template-areas: "a b"
+      grid-template-areas: "a b"
     "c c";
 }
 
@@ -290,6 +297,8 @@ dd + dt {
   margin-bottom: -0.625rem;
   max-width: 5rem;
   flex-shrink: 0;
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
   grid-area: a;
 }
 
@@ -298,7 +307,11 @@ dd + dt {
 }
 
 .c-header__toggle {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
   grid-area: b;
   position: relative;
   margin-left: auto;
@@ -325,10 +338,14 @@ dd + dt {
 }
 
 .c-header__toggle.is-active::after {
-  transform: rotate(180deg);
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
 }
 
 .c-header__nav {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
   grid-area: c;
   padding-top: 0.625rem;
 }
@@ -350,6 +367,8 @@ dd + dt {
   }
 
   .c-header__nav {
+    -ms-grid-row: 1;
+    -ms-grid-column: 2;
     grid-area: b;
     display: flex;
     justify-content: flex-end;
@@ -376,7 +395,8 @@ dd + dt {
     left: 0;
     width: 100%;
     height: 0.625rem;
-    transform: translateY(100%);
+    -webkit-transform: translateY(100%);
+            transform: translateY(100%);
     background-color: var(--color-primary);
     opacity: 0;
   }
@@ -485,7 +505,9 @@ dd + dt {
 }
 
 .c-form__button {
-  appearance: none;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
   padding: 0.5rem 1rem;
   background-color: #0b0c0c;
   border: 2px solid #0b0c0c;
@@ -570,11 +592,7 @@ dd + dt {
  */
 
 .c-pagination {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
 }
 
